[package]
name = "com-sandpolis-agent-boot"
version = "0.1.0"
edition = "2018"

[dependencies]
uefi = {version = "0.12.0", features = ["exts"]}
uefi-services = "0.9.0"
log = { version = "0.4.11", default-features = false }
uuid = { version = "0.8", default-features = false }
anyhow = { version = "1.0", default-features = false}
